une mise à jour :)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CocoricoLauncher",
-  "version": "1.1.5",
+  "version": "v1.1.5",
   "productName": "Launcher de CocoricoMC",
   "description": "Modded Minecraft Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/) + DenoxTV & Coera",
