--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoricolauncher",
-  "version": "v1.2.5",
+  "version": "1.2.5",
   "productName": "Launcher de CocoricoMC",
   "description": "Modded Minecraft Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/) + DenoxTV & Coera",
