--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cocoricolauncher",
+  "name": "cocorico-launcher",
   "version": "1.2.6",
   "productName": "Launcher de CocoricoMC",
   "description": "Modded Minecraft Launcher",
