--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cocorico-launcher",
+  "name": "cocoricolauncher",
   "version": "1.2.5",
-  "productName": "Launcher de CocoricoMC",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/) + DenoxTV & Coera",
+  "productName": "Cocorico Launcher",
+  "description": "Launcher de CocoricoMC",
+  "author": "Daniel Scalzi (https://github.com/dscalzi/) & Denox & coera",
   "license": "UNLICENSED",
   "homepage": "https://github.com/DenoxTV/CocoricoLauncher",
   "bugs": {
@@ -26,9 +26,10 @@
     "@electron/remote": "^1.2.0",
     "adm-zip": "^0.5.5",
     "async": "^3.2.0",
+    "discord-rpc": "^3.2.0",
     "ejs": "^3.1.6",
     "ejs-electron": "^2.1.1",
-    "electron-updater": "^4.3.8",
+    "electron-updater": "^4.3.9",
     "fs-extra": "^10.0.0",
     "github-syntax-dark": "^0.5.0",
     "jquery": "^3.6.0",
